fix: search facet text not wrapping (#103)

--- a/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
+++ b/packages/discovery-styles/scss/components/search-facets/_search-facets.scss
@@ -10,6 +10,7 @@
 
 .#{$prefix}--search-facet {
   margin-bottom: $spacing-md;
+  word-break: break-word;
 }
 
 .#{$prefix}--search-facet__facet__label-and-selection-container {
